--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
-<div id="sp" class="single_post">
+<article>
 	<h2>{{ page.title }}</h2>
 	<p class="date">{{ page.date | date_to_string }}</p>
 	<div class="content">
 		{{ content }}
 	</div>
-</div>
+</article>
