--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,43 +1,141 @@
-/***************************************************
- * Common
- **************************************************/
-p {
-	color: #333;
-	margin: 12px 0;
-}
-
-a {
-	color: #f97e76;
-}
-
-h2 {
-	color: #f97e76;
-	font-size: 2em;
-}
-
-pre {
-	background-color: #EEE;
-	padding: 8px;
-	overflow-x: auto;
-}
-
-/***************************************************
- *  _layouts
- **************************************************/
-@font-face {
+html,body {
+	background-color: #fafafa;
 	font-family: 'Pathway';
-	src: url('pathway.ttf');
-}
-
-html, body {
-	background-color: #E9F0F4; 
-	font-family: 'Pathway';
+	margin: 0;
+	padding: 0;
 	height: 100%;
+	width: 100%;
+}
+
+article a { color: #e74c3c; }	
+article h2 { color: #e74c3c; font-family: 'Pathway';}
+article .date { font-size: 1.3em;}
+
+article .dateformat {
+	background-color: #e74c3c;	
+	color: #FFF;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	text-align: center;
+	padding: 8px;
+	width: 64px;
+}
+
+article .dateformat .day_month {
+	font-size: 2.3em;
+	float: left;
+	line-height: 0.9em;
+	text-transform: uppercase;
+	width: 70%;
+}
+
+article .dateformat .year {
+	float: right;
+	line-height: 14px;
+	width: 8px;
+	word-wrap: break-word;
+
+}
+
+article .post_content .title a { font-size: 1.7em; }
+article .post_content .content { font-size: 1.45em; font-family: 'Pathway'; text-align: justify; }
+article .content { font-size: 1.2em; font-family: 'Roboto'; padding-right: 32px; text-align: justify;}
+
+footer, .site:after {
+	height: 142px;
+}
+
+footer {
+   background-color: #34495e;
+	height: 142px;
+	padding: 16px;
+}
+
+footer p {
+	color: #FFF;
+	font-family: 'Pathway';
+	font-size: 1.6em;
+	text-align: center;
+}
+
+header {
+	background-color: #27ae90;
+	width: 100%;
+}
+
+
+header #logo{ width: 100%; }
+
+nav {
+	background-color: #ecf0f1;
+	border-bottom: 3px solid #95a5a6;
+	height: 64px;
+	margin: 0 auto;
+}
+
+nav ul {
+	float: left;
+	text-align: center;
+	width: 60%;
+}
+
+nav ul li {
+	display: inline-block;
+	line-height: 64px;
+}
+
+nav ul li a {
+	display: block;
+	color: #7f8c8d;
+	font-family: 'Pathway';
+	font-size: 1.5em;
+	width: 64px;
+	-webkit-transition: all .3s ease;
+	transition: all .3s ease;
+}
+
+nav ul li a:hover {
+	color: #e74c3c;
+	text-decoration: none;
+}
+
+nav .search {
+	background: #FFF url('../img/search.png') no-repeat 10px 8px;
+	border: 1px solid #95a5a6;
+	border-radius: 2px;
+	margin: 16px 8px 0 0;
+	height: 32px;
+	float: right;
+	padding: 0 5px 0 35px;
+	vertical-align: middle;
+	-webkit-transition: all .3s ease;
+	transition: all .3s ease;
+	width: 20px;
+}
+
+nav .search:focus {
+	border: 1px solid #e74c3c;
+	width: 35%;
+}
+
+section#content { margin-bottom: 128px;}
+
+section#content article {
+	background-color: #fff;
+	border-bottom: 4px solid #cdcdcd;
+	font-family: 'Pathway';
+	margin: 32px auto;
+	min-height: 128px;
+	padding: 8px 16px 16px 72px;
+	position: relative;
+	width: 90%;
 }
 
 .site {
 	min-height: 100%;
-	margin-bottom: -120px;
+	margin-bottom: -142px;
 }
 
 .site:after {
@@ -45,186 +143,7 @@ html, body {
 	display: block;
 }
 
-.header {
-	background: #27ae90;
-	position: relative;
-	overflow: hidden;
-}
-
-.image {
-	display: block;
-	max-height: 384px;
+.wrapper {
 	margin: 0 auto;
-	max-width: 60%;
+	max-width: 960px;	
 }
-
-nav {
-	background-color: #2E3641;
-	height: 72px;
-	text-align: center;
-}
-
-nav ul li {
-	display: inline-block;
-	width: 128px;
-}
-
-nav ul a {
-	color: #FFF;
-	display: block;
-	line-height: 72px;
-	font-size: 2.5em;
-	text-decoration: none;
-}
-
-nav ul a:hover {
-	color: #C1CFD9;
-}
-
-div.top_menu {
-	display: none;
-}
-
-div.maincontent {
-	overflow: hidden;
-}
-
-div.footer, .site:after {
-	height: 128px;
-}
-
-div.footer {
-	background-color: #2E3641;
-	padding: 8px;
-	text-align: center;
-}
-div.footer p {
-	color: #FFF;
-}
-div.footer .followlinks ul {
-	text-align: center;
-}
-div.footer .followlinks ul li {
-	display: inline-block;
-	padding-left: 5px;
-	/*margin: 8px;*/
-}
-div.footer .followlinks ul li img {
-	display: block;
-	width: 64px;
-	height: 64px;
-}
-/*************************************************
- * Posts
- ************************************************/
-.post {
-   background-color: #FFF;
-	border-bottom: 4px solid #DDD;
-	margin: 12px auto;
-	min-height: 96px;
-	padding-bottom: 8px;
-	position: relative;
-	width: 95%;
-}
-
-.dateformat {
-	background-color: #F97E76;
-	color: #FFF;
-	padding: 8px;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	width: 72px;
-}
-
-.leftside {
-	float: left;
-}
-
-.day_month {
-	font-size: 2em;
-	line-height: 28px;
-	text-align: center;
-	text-transform: uppercase;
-	width: 48px;
-}
-
-.rightside {
-	float: right;
-}
-
-.year {
-	line-height: 14px;
-	text-align: center;
-	width: 7px;
-	word-wrap: break-word;
-}
-
-.post_content {
-	margin: 4px 16px 0 84px;
-}
-
-.post_content a {
-	color: #F97E76;	
-	text-decoration: none;
-}
-
-.post_content .title {
-	font-size: 1.5em;
-	position: relative;
-	top: 4px;
-}
-
-.post_content .content {
-	font-family: 'Pathway';
-	font-size: 0.9em;
-	margin: 4px 0;
-	position: relative;
-	text-align: justify;
-	top: 4px;
-}
-
-/*****************************************
- * Single Post
- ****************************************/
-.single_post {
-	background-color: #FFF;
-	border-bottom: 4px solid #DDD;
-	margin: 16px auto;
-	padding: 8px;
-	width: 90%;
-}
-
-.single_post h2 {
-	text-align: center;
-	font-family: 'Pathway';
-}
-
-.single_post .date {
-	text-align: center;
-}
-
-.single_post .content {
-	margin: 32px 0;
-	font-family: 'Pathway';
-	font-size: 1.2em;
-	text-align: justify;
-}
-
-/*****************************************
- * clearfix
- ****************************************/
-.clearfix:after {
-	clear: both;
-	content: ".";
-	display: block;
-	height: 0;
-	visibility: hidden;
-}
-
-.clearfix { display: inline-block;}
-
-/* Hides from IE-mac */
-* html .clearfix { height: 1%;}
-.clearfix { display: block;}
-/* End hide from IE-mac */
