--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article>
+<article id="postContent" class="single_post">
 	<h2>{{ page.title }}</h2>
 	<p class="date">{{ page.date | date_to_string }}</p>
 	<div class="content">
