--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,4 @@
 html,body {
-	background-color: #fafafa;
 	font-family: 'Pathway';
 	margin: 0;
 	padding: 0;
@@ -7,6 +6,18 @@ html,body {
 	width: 100%;
 }
 
+#aboutPhoto { display: block; margin: 0 auto; max-width: 60%;}
+
+article {
+	background-color: #fff;
+	border-bottom: 4px solid #cdcdcd;
+	font-family: 'Pathway';
+	margin: 0 auto;
+	margin-bottom: 32px;
+	min-height: 224px;
+	position: relative;
+	width: 90%;
+}
 article a { color: #e74c3c; }	
 article h2 { color: #e74c3c; font-family: 'Pathway';}
 article .date { font-size: 1.3em;}
@@ -36,114 +47,80 @@ article .dateformat .year {
 	line-height: 14px;
 	width: 8px;
 	word-wrap: break-word;
-
 }
 
 article .post_content .title a { font-size: 1.7em; }
 article .post_content .content { font-size: 1.45em; font-family: 'Pathway'; text-align: justify; }
-article .content { font-size: 1.2em; font-family: 'Roboto'; padding-right: 32px; text-align: justify;}
+article .content { font-size: 1.2em; font-family: 'Roboto'; text-align: justify;}
 
-footer, .site:after {
-	height: 142px;
-}
-
-footer {
-   background-color: #34495e;
-	height: 142px;
-	padding: 16px;
-}
+footer, .site:after { height: 142px; }
+footer { background-color: #34495e; height: 142px; padding: 32px;}
 
 footer p {
 	color: #FFF;
 	font-family: 'Pathway';
-	font-size: 1.6em;
+	font-size: 1.25em;
 	text-align: center;
 }
 
-header {
-	background-color: #27ae90;
-	width: 100%;
-}
-
-
+header {	background-color: #27ae90; max-height: 384px; width: 100%;}
 header #logo{ width: 100%; }
+
+.introduction { margin-top: 16px;}
+.introduction h1 { font-family: 'Pathway'; font-size: 3em; margin: 0; line-height: 36px; text-align: center;}
+.introduction h2 { font-size: 1.4em; margin: 8px 0; text-align: center;}
+.introduction p { margin-top: 16px; font-size: 1.25em; text-align: justify;}
 
 nav {
 	background-color: #ecf0f1;
 	border-bottom: 3px solid #95a5a6;
-	height: 64px;
+	height: 48px;
 	margin: 0 auto;
 }
 
-nav ul {
-	float: left;
-	text-align: center;
-	width: 60%;
-}
-
-nav ul li {
-	display: inline-block;
-	line-height: 64px;
-}
-
-nav ul li a {
+nav ul { float: left; text-align: center; width: 100%;}
+nav ul li { display: inline-block; line-height: 48px; padding: 0px 16px 0 16px;}
+nav ul li a { 
+	color: #7f8c8d; 
 	display: block;
-	color: #7f8c8d;
-	font-family: 'Pathway';
-	font-size: 1.5em;
-	width: 64px;
+	font-size: 1.2em;
 	-webkit-transition: all .3s ease;
 	transition: all .3s ease;
 }
-
-nav ul li a:hover {
-	color: #e74c3c;
-	text-decoration: none;
-}
-
+nav ul li a:hover { color: #e74c3c; }
 nav .search {
-	background: #FFF url('../img/search.png') no-repeat 10px 8px;
-	border: 1px solid #95a5a6;
-	border-radius: 2px;
-	margin: 16px 8px 0 0;
-	height: 32px;
-	float: right;
-	padding: 0 5px 0 35px;
-	vertical-align: middle;
-	-webkit-transition: all .3s ease;
-	transition: all .3s ease;
-	width: 20px;
+	 background: #FFF url('../img/search.png') no-repeat 10px 8px;
+    border: 1px solid #95a5a6;
+    border-radius: 2px;
+	 display: none;
+    margin: 8px 8px 0 0;
+    height: 32px;
+    float: right;
+    padding: 0 5px 0 35px;
+    vertical-align: middle;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    width: 20px;
 }
 
-nav .search:focus {
-	border: 1px solid #e74c3c;
-	width: 35%;
-}
+nav .search:focus { border: 1px solid #e74c3c; width: 135px;}
 
-section#content { margin-bottom: 128px;}
 
-section#content article {
-	background-color: #fff;
-	border-bottom: 4px solid #cdcdcd;
-	font-family: 'Pathway';
-	margin: 32px auto;
-	min-height: 128px;
-	padding: 8px 16px 16px 72px;
-	position: relative;
-	width: 90%;
-}
+.posts { padding: 8px 16px 16px 72px; }
 
-.site {
-	min-height: 100%;
-	margin-bottom: -142px;
-}
+section#content { background-color: #E2E5E9; padding-top: 32px;}
+.single_post { padding: 32px; }
 
-.site:after {
-	content: "";
-	display: block;
-}
+.site { background-color: #E2E5E9; margin-bottom: -142px; min-height: 100%;}
+.site:after { content: ""; display: block;}
 
-.wrapper {
-	margin: 0 auto;
-	max-width: 960px;	
-}
+.socialBox { margin-top: 32px; width: 100%; text-align: center;}
+.socialBox li { display: inline-block; max-width: 15%;}
+.socialBox a { background: #95a5a6; display: block; -webkit-transition: all .3s ease; transition: all .3s ease;}
+.socialBox img { width: 100%;}
+.socialBox #twitter:hover { background-color: #00abec;}
+.socialBox #gplus:hover { background-color: #d85534;}
+.socialBox #linkedIn:hover { background-color: #0274b3;}
+.socialBox #github:hover { background-color: #3b3b3b;}
+
+.wrapper { margin: 0 auto;	max-width: 960px;}
