Some refactoring in CSS files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width,maximum-scale=1,user-scalable=no">
 		  <link rel="stylesheet" href="/css/reset.css">
+		  <!-- Google Fonts -->
+		  <link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>	
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 		  <link rel="stylesheet" href="/css/bootstrap.min.css" />
@@ -14,7 +16,6 @@
 		  <link rel="stylesheet" media="screen and (min-width: 600px)" href="/css/desktop.css" /> 
         <!-- Mobile CSS -->
         <link rel="stylesheet" media="screen and (max-width: 600px)" href="/css/mobile.css" /> 
-		  <!-- Google Fonts -->
 		  <script type="text/javascript" src="js/angular.min.js"></script>
 		  <script type="text/javascript" src="js/angular-sanitize.min.js"></script>
 		  <script type="text/javascript" src="js/controller.js"></script>
