--- a/css/base.css
+++ b/css/base.css
@@ -1,11 +1,54 @@
-@font-face {
-	src: url('pathway.ttf');
-	font-family: 'Pathway';
+/*******************************************
+ * Common Things
+ ******************************************/
+html,body {
+	background-color: #E2E5E9;
+	font-family: 'Pathway Gothic One';
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
 }
 
 * { margin: 0;}
-a { text-decoration: none; }
+a { color: #e74c3c; text-decoration: none; }
 a:hover { text-decoration: none; }
+article {
+	background-color: #FFF;
+	border-bottom: 4px solid #cdcdcd;
+	margin: 0 auto;
+	margin-bottom: 32px;
+	position: relative;
+	width: 90%;
+}
+article .date { font-size: 1.3em; }
+article .dateformat {
+	background-color: #e74c3c;
+	color: #FFF;
+	padding: 8px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	text-align: center;
+	width: 64px;
+}
+article .dateformat .day_month {
+	font-size: 2.3em;
+	float: left;
+	line-height: 0.9em;
+	text-transform: uppercase;
+	width: 70%;
+}
+article .dateformat .year {
+	float: right;
+	line-height: 14px;
+	width: 8px;
+	word-wrap: break-word;
+}
+article .post_content .content { font-size: 1.45em; text-align: justify; }
+article .post_content .title a { font-size: 1.7em; }
+
 
 .clearfix:after {
 	visibility: hidden;
@@ -16,12 +59,33 @@ a:hover { text-decoration: none; }
 	height: 0;
 }
 
-input {
-	border: none;
-	border-radius: 2px;
-}
+footer { background-color: #34495e; height: 142px; padding: 32px;}
+footer p { color: #FFF; text-align: center; }
+footer, .site:after { height: 142px;}
+
+h1 { color: #333; font-family: 'Pathway Gothic One';}
+h2 { color: #e74c3c; font-family: 'Pathway Gothic One';}
+header { background-color: #27ae90; max-height: 384px; width: 100%;}
+header #logo { width: 100%;}
+
+input { border: none; border-radius: 2px;}
+
+nav { background-color: #ecf0f1; border-bottom: 3px solid #95a5a6; margin: 0 auto;}
 
 section { margin: 0; padding: 0;}
+section#content { padding-top: 32px;}
+.socialBox { margin-top: 32px; width: 100%; text-align: center;}
+.socialBox li { display: inline-block; max-width: 15%;} 
+.socialBox a { background: #95a5a6; display: block; -webkit-transition: all .3s ease; transition: all .3s ease;}
+.socialBox img { width: 100%;}
+.socialBox #twitter:hover { background-color: #00abec;}
+.socialBox #gplus:hover { background-color: #d85534;}
+.socialBox #linkedIn:hover { background-color: #0274b3;}
+.socialBox #github:hover { background-color: #3b3b3b;}
+.single_post { padding: 32px; }
+.site:after { content: ""; display: block; }
+
+.wrapper { margin: 0 auto; max-width: 960px; }
 
 * html .clearfix { zoom: 1; } /* IE6 */
 *:first-child+html .clearfix { zoom : 1; } /* IE7 */
