--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width,maximum-scale=1,user-scalable=no">
+		  <link rel="shortcut icon" href="/favicon.ico" type="image/ico" />
 		  <link rel="stylesheet" href="/css/reset.css">
 		  <!-- Google Fonts -->
 		  <link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>	
