--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 						<li><a href="/">HOME</a></li>
 						<li><a href="/about#aboutMe">ABOUT ME</a></li>
 						<li><a href="/contact">CONTACT</a></li>
-						<li><a href="/projects">PROJECTS</a></li>
+						<li><a href="/my_projects">PROJECTS</a></li>
 					</ul>
 				   <input class="search" type="text" placeholder="Search" ng-model="query"/>
 				</div>
