--- a/css/mobile.css
+++ b/css/mobile.css
@@ -24,5 +24,20 @@ nav ul li a:hover { color: #e74c3c; }
 nav .search { display: none;}
 
 .posts { padding: 8px 16px 16px 72px; }
+.projectBox {
+	padding: 8px;
+}
+.projectBox img { 
+	display: block; 
+	margin: 0 auto; 
+	position: relative; 
+	text-align: center; 
+	top: 0;
+}
+.projectDesc { padding: 0px; }
+.projectDesc h2 { text-align: center; margin: 16px 0;}
 
 .site { background-color: #E2E5E9; margin-bottom: -142px; min-height: 100%;}
+.socialBox li {
+	max-width: 24%;
+}
